--- a/auth-api/package.json
+++ b/auth-api/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -17,46 +17,73 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "nest": "nest"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.8.16",
-    "@grpc/proto-loader": "^0.7.7",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/microservices": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/terminus": "^10.0.1",
-    "@prisma/client": "^4.16.0",
+    "@elastic/ecs-winston-format": "^1.3.1",
+    "@grpc/grpc-js": "^1.8.14",
+    "@grpc/proto-loader": "^0.7.6",
+    "@metinseylan/nestjs-opentelemetry": "^3.0.0",
+    "@nestjs/common": "^9.4.0",
+    "@nestjs/config": "^2.3.1",
+    "@nestjs/core": "^9.4.0",
+    "@nestjs/jwt": "^10.0.3",
+    "@nestjs/microservices": "^9.4.0",
+    "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/terminus": "^9.2.2",
+    "@opentelemetry/api": "^1.4.1",
+    "@opentelemetry/auto-instrumentations-node": "^0.36.5",
+    "@opentelemetry/exporter-jaeger": "^1.12.0",
+    "@opentelemetry/exporter-prometheus": "^0.38.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.38.0",
+    "@opentelemetry/instrumentation": "^0.38.0",
+    "@opentelemetry/instrumentation-grpc": "^0.38.0",
+    "@opentelemetry/instrumentation-nestjs-core": "^0.32.2",
+    "@opentelemetry/instrumentation-winston": "^0.31.1",
+    "@opentelemetry/resources": "^1.12.0",
+    "@opentelemetry/sdk-node": "^0.38.0",
+    "@opentelemetry/sdk-trace-base": "^1.12.0",
+    "@opentelemetry/sdk-trace-node": "^1.12.0",
+    "@opentelemetry/semantic-conventions": "^1.12.0",
+    "@prisma/client": "^4.12.0",
+    "@prisma/instrumentation": "^4.12.0",
+    "@protobuf-ts/runtime": "^2.8.3",
+    "@protobuf-ts/runtime-rpc": "^2.8.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "joi": "^17.9.1",
+    "nest-winston": "^1.9.1",
     "nestjs-grpc-reflection": "^0.0.21",
-    "prisma": "^4.16.0",
+    "pino-http": "^8.3.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "zod": "^3.21.4"
+    "rxjs": "^7.8.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/cli": "^9.4.0",
+    "@nestjs/schematics": "^9.1.0",
+    "@nestjs/testing": "^9.4.0",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/jest": "29.5.0",
+    "@types/node": "18.15.11",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
-    "eslint": "^8.42.0",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
-    "prettier": "^2.8.8",
+    "jest": "29.5.0",
+    "pino-pretty": "^10.0.0",
+    "prettier": "^2.8.7",
+    "prisma": "^4.12.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
+    "ts-jest": "29.1.0",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "tsconfig-paths": "4.2.0",
+    "typescript": "^5.0.4"
   },
   "jest": {
     "moduleFileExtensions": [
