--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ MARIADB_ROOT_PASSWORD="root"
 USER_DB_URL='mysql://root:root@db:3306/user'
 AUTH_DB_URL='mysql://root:root@db:3306/auth'
 
-AUTH_API_URL="http://localhost:5001"
-USER_API_URL="http://localhost:5001"
-ARTICLE_API_URL="http://localhost:5002"
+AUTH_API_URL="http://auth:4000"
+USER_API_URL="http://user:4000"
+ARTICLE_API_URL="http://article:4000"
 
 JWT_SECRET="jwt-secret-key"
 
-JAEGER_URL="http://tracing:14268/api/traces"
+JAEGER_URL="http://tracing:4318/v1/traces"
