feat: add article api (in progress)

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ MARIADB_ROOT_PASSWORD="root"
 
 USER_DB_URL='mysql://root:root@db:3306/user'
 AUTH_DB_URL='mysql://root:root@db:3306/auth'
+ARTICLE_DB_URL='mysql://root:root@db:3306/article'
 
 AUTH_API_URL="http://auth:4000"
 USER_API_URL="http://user:4000"
