--- a/proto/buf.gen.yaml
+++ b/proto/buf.gen.yaml
@@ -3,6 +3,12 @@ managed:
   enabled: true
 plugins:
   - plugin: buf.build/community/stephenh-ts-proto
+    out: ../article-api/src/stubs
+    opt:
+      - addGrpcMetadata=true
+      - nestJs=true
+      - useOptionals=all
+  - plugin: buf.build/community/stephenh-ts-proto
     out: ../user-api/src/stubs
     opt:
       - addGrpcMetadata=true
