--- a/.env
+++ b/.env
@@ -4,10 +4,10 @@ USER_DB_URL='mysql://root:root@db:3306/user'
 AUTH_DB_URL='mysql://root:root@db:3306/auth'
 ARTICLE_DB_URL='mysql://root:root@db:3306/article'
 
-AUTH_API_URL="http://auth:4000"
-USER_API_URL="http://user:4000"
-ARTICLE_API_URL="http://article:4000"
+AUTH_API_URL="dns:///auth:4000"
+USER_API_URL="dns:///user:4000"
+ARTICLE_API_URL="dns:///article:4000"
 
 JWT_SECRET="jwt-secret-key"
 
-JAEGER_URL="http://tracing:4318/v1/traces"
+JAEGER_URL="http://tracing:4317"
