--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -8,8 +8,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
-    "strict": true,
-    "typeRoots": ["./.svelte-kit/**/*.d.ts"]
+    "strict": true
   }
   // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
   //
